--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,14 +1,12 @@
 #cart {
     height: 100%;
     width: 20%;
-    margin-right: -20%;
     position: fixed;
-    z-index: 1;
     top: 75px;
     right: 0;
     background-color: #eee;
     overflow-x: hidden;
-    transition: margin-right 0.5s;
+    transition: 0.5s;
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
