svelte store, view products and add to cart

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -23,7 +23,9 @@
 .sideBtn {
     color:  #A38A00;
     width:100%;
+    border-bottom: 1px solid  #A38A00;
     margin-bottom: 20px;
     display:flex;
     flex-flow: column;
+    cursor: pointer;
 }
